k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-test-service
spec:
  selector:
    app: http-test-service
  ports:
  - port: 8081
    targetPort: 8080
    protocol: TCP
